--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
+    <main>
+        <section id="telefone">
+            <iframe name="tela" id="tela" src="home.html" frameborder="0"></iframe>
+
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
     
 </body>
 </html>
