--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe name="tela" id="tela" src="home.html" frameborder="0"></iframe>
+            <iframe name="tela" id="tela" src="home.html" frameborder="0"> Seu navegador não é compativel com isso.</iframe>
 
         </section>
         <section id="redes-sociais">
+            <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="logo-home"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"> </a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a> <br>
+            <a href="#" target="tela"> <img src="imagens/logo-twitter.jpg" alt="logo-twitter"> </a> <br>
+            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="logo-github"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"> </a> 
+            
 
         </section>
     </main>
